# taglib-android

./: .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nomad88/taglib/android/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nomad88/taglib/android/demo/: DemoApplication.kt  MainActivity.kt  MainViewModel.kt  MusicItem.kt  MusicItemView.kt  StreamUtils.kt
app/src/main/res/layout/: activity_main.xml  epoxy_music_item_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nomad88/taglib/android/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
taglib-android/: build.gradle
taglib-android/src/androidTest/assets/: test_with_tags.m4a
taglib-android/src/androidTest/java/com/nomad88/taglib/android/: ContextExtensions.kt  ExampleInstrumentedTest.java  MP4FileTest.kt  OggVorbisFileTest.kt
taglib-android/src/main/: AndroidManifest.xml
taglib-android/src/main/cpp/: .gitignore  CMakeLists.txt  taglib_audioproperties.cpp  taglib_mp4file.cpp  taglib_mp4tag.cpp  taglib_oggvorbisfile.cpp  taglib_oggvorbistag.cpp  taglib_wrapper.h  taglibwrapper.cpp
taglib-android/src/main/java/com/nomad88/taglib/android/: AudioProperties.kt  CoverArtFormat.kt  FileRef.kt  MP4File.kt  MP4Tag.kt  OggVorbisFile.kt  Tag.kt  TagFile.kt  TagLib.java  TagLibAndroid.java
taglib-android/src/test/java/com/nomad88/taglib/android/: ExampleUnitTest.java
(+8 files in other folders)
